<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".telaResultado">

    <Button
        android:id="@+id/btnSalvar"
        android:layout_width="250dp"
        android:layout_height="65dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins_medium"
        android:shadowColor="@color/white"
        android:text="@string/tlResultadoBtn"
        android:textColor="@color/new_cinza_fundo_claro"
        android:textStyle="bold"
        app:backgroundTint="@color/new_preto"
        app:elevation="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbSalvarDados" />

    <TextView
        android:id="@+id/textViewLblTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_alternates_medium"
        android:gravity="center_horizontal"
        android:text="@string/tlResultadoLbl"
        android:textColor="@color/new_cinza_escuro"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagemResultado" />

    <TextView
        android:id="@+id/textViewLblResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center_horizontal"
        android:text="@string/etanol"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLblTitulo" />

    <ImageView
        android:id="@+id/imagemResultado"
        android:layout_width="302dp"
        android:layout_height="289dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/etanol"
        tools:layout_editor_absoluteY="4dp" />

    <CheckBox
        android:id="@+id/cbSalvarDados"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/montserrat_alternates_medium"
        android:text="@string/tlResultadoCheckBox"
        android:textColor="@color/new_cinza_escuro"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLblResultado"
        tools:text="@string/tlResultadoCheckBox" />


</androidx.constraintlayout.widget.ConstraintLayout>