<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"


    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:importantForAutofill="no"
    android:orientation="vertical"
    tools:context=".telaComparacao">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/montserrat_alternates_medium"
        android:gravity="center_horizontal"
        android:text="@string/tlCompLbl"
        android:textColor="@color/new_preto"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewLblAlcool"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center_horizontal"
        android:text="@string/etanol"
        android:textColor="@color/new_cinza_escuro"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/etValorEtanol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:digits="1234567890,"
        android:ems="10"
        android:fontFamily="@font/poppins"
        android:gravity="center"
        android:backgroundTint="@color/new_preto"
        android:inputType="numberDecimal"
        android:maxLength="5"
        android:singleLine="true"
        android:textAlignment="gravity"
        android:textColor="@color/amarelo"
        android:textColorHighlight="@color/new_preto"
        android:textColorHint="@color/new_preto"
        android:textColorLink="@color/new_preto"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLblAlcool"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textViewLblGas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center"
        android:text="@string/gasolina"
        android:textColor="@color/new_cinza_escuro"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etValorEtanol" />

    <EditText
        android:id="@id/etValorGas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:digits="1234567890,"
        android:ems="10"
        android:fontFamily="@font/poppins"
        android:foregroundGravity="center"
        android:gravity="center"
        android:inputType="numberDecimal"
        android:maxLength="5"
        android:singleLine="true"
        android:textAlignment="gravity"
        android:backgroundTint="@color/new_preto"
        android:textColor="@color/amarelo"
        android:textColorHighlight="@color/new_preto"
        android:textColorHint="@color/new_preto"
        android:textColorLink="@color/new_preto"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLblGas"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/btnComparar"
        android:layout_width="250dp"
        android:layout_height="65dp"
        android:fontFamily="@font/poppins_medium"
        android:shadowDx="20"
        android:shadowDy="20"
        android:text="@string/btnComp"
        android:textColor="@color/new_cinza_fundo_claro"
        android:textStyle="bold"
        app:backgroundTint="@color/new_preto"
        app:elevation="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etValorGas" />
</androidx.constraintlayout.widget.ConstraintLayout>